[package]
name = "ContentAPI_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
# reqwest = { version = "0.11.12", features = ["json"] }
# tokio = { version = "v1.23.0", features = ["full"] }
# oauth2 = "4.3.0"
# json = "0.12.4"